--- a/quantum-e-commerce/BE/.env
+++ b/quantum-e-commerce/BE/.env
@@ -6,7 +6,7 @@ DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Supabase Database
-postgresql://postgres.fkiprfdfgwwnzuffnkqq:3b2qLJeYHSvpnfY6@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
+DATABASE_URL=postgresql://postgres.fkiprfdfgwwnzuffnkqq:3b2qLJeYHSvpnfY6@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
 
 
 # Supabase API
